@@ -1,5 +1,5 @@
 #
-# $Id: entry.tcl,v 1.2 2006/11/07 03:45:28 jenglish Exp $
+# $Id: entry.tcl,v 1.3 2007/09/30 16:54:38 jenglish Exp $
 #
 # DERIVED FROM: tk/library/entry.tcl r1.22
 #
@@ -452,11 +452,11 @@ proc ttk::entry::WordSelect {w from to} {
 
 ## WordBack, WordForward -- helper routines for WordSelect.
 #
-proc WordBack {text index} {
+proc ttk::entry::WordBack {text index} {
     if {[set pos [tcl_wordBreakBefore $text $index]] < 0} { return 0 }
     return $pos
 }
-proc WordForward {text index} {
+proc ttk::entry::WordForward {text index} {
     if {[set pos [tcl_wordBreakAfter $text $index]] < 0} { return end }
     return $pos
 }
