@@ -1,3 +1,9 @@
+2007-09-30  Joe English  <jenglish@users.sourceforge.net>
+
+	* library/ttk/entry.tcl (WordBack, WordForward):
+	Fix private routines accidentally defined in global namespace
+	[Bug 1803836]
+
 2007-09-26  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>
 
 	* library/msgs/hu.msg: Added Hungarian message set, from Pader Reszo.
